# devnews

./: .flaskenv  .gitignore  README.md  devnews.fcgi  pyproject.toml
src/devnews/: api.py  cli.py  devnews.py  entities.py  interfaces.py  repositories.py  use_cases.py  web.py
src/devnews/config/: swagger.yaml  urls.json
src/devnews/templates/: devnews.html
tests/: conftest.py  data  test_api.py  test_cli.py  test_devnews.py  test_entities.py  test_interfaces.py  test_repositories.py  test_use_cases.py  test_web.py
