[tool.poetry]
name = "devnews"
version = "0.1.0"
description = ""
authors = ["Douglas Blackwood <douglas.blackwood@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "^5.2.1"
terminaltables = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
