[tool.poetry]
name = "devnews"
version = "0.1.0"
description = "News for devs"
authors = ["Douglas Blackwood <douglas.blackwood@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "^5.2.1"
terminaltables = "^3.1.0"
click = "^7.1.2"
connexion = {extras = ["swagger-ui"], version = "^2.7.0"}
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6"
black = "^19.10b0"
python-dotenv = "^0.14.0"

[tool.poetry.scripts]
devnews = 'devnews.cli:list_news'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

